# q-player

./: .gitignore  package-lock.json
q-stream/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
q-stream/src/: App.tsx  api.ts  index.css  store.ts  types.ts
q-stream/src-tauri/: Cargo.toml  build_errors.txt  tauri.conf.json
q-stream/src-tauri/.cargo/: config.toml
q-stream/src-tauri/capabilities/: default.json
q-stream/src-tauri/src/: audio.rs  config.rs  lastfm.rs  local_library.rs  main.rs  models.rs  musicbrainz.rs  persistence.rs  qobuz.rs  recommendation.rs  state.rs
q-stream/src-tauri/src/commands/: auth.rs  browse.rs  connect.rs  favorites.rs  lastfm.rs  local_library.rs  mod.rs  persistence.rs  playback.rs  queue.rs  recommendations.rs  ui.rs
q-stream/src-tauri/src/qonductor/: config.rs  connection.rs  credentials.rs  discovery.rs  error.rs  event.rs  manager.rs  mod.rs  msg.rs  qconnect.rs  session.rs  types.rs
q-stream/src/components/: EqPanel.tsx  FullscreenPlayer.tsx  LoginModal.tsx  MainContent.tsx  PlayerBar.tsx  Sidebar.tsx
q-stream/src/components/cards/: AlbumCard.tsx  PlaylistCard.tsx  TrackRow.tsx
q-stream/src/components/views/: AlbumView.tsx  ArtistView.tsx  EqView.tsx  FavoritesView.tsx  HomeView.tsx  LocalView.tsx  PlaylistView.tsx  QueueView.tsx  SearchView.tsx  SettingsView.tsx
q-stream/src/tests/: player.test.ts  spectrum.test.ts
