[package]
name = "q-stream"
version = "0.1.0"
edition = "2021"
description = "Q-Stream — Hi-Res Qobuz Streaming Player"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
regex = "1"
md-5 = "0.10"
base64 = "0.22"
rodio = { version = "0.19", features = ["flac", "mp3", "symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"
lofty = "0.21"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
color-thief = "0.2"
walkdir = "2"
rustfft = "6"
urlencoding = "2"

[profile.dev]
# Reduce debug info to line tables only (instead of full DWARF).
# Fixes MSVC LNK1140 "PDB size exceeded" on large dependency graphs.
debug = 1

[profile.dev.package."*"]
# Compile dependencies with minimal debug info to keep PDB small.
debug = false

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
